# EM_Fast_API_project

./: .gitignore  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_07_20_1633-7c8a8972793e_create_account_secret_user.py  2024_07_21_1711-910e5891fd93_create_invite.py  2024_07_22_2239-0bd94f8298e2_create_company.py  2024_07_23_1215-a70265312559_update_user.py  2024_07_24_1623-cc8d421db5b5_update_invite_secret.py  2024_07_25_1928-3e3b5fa21693_update_account.py  2024_07_29_1913-b18525c6da5f_add_division.py  2024_07_30_1916-0d27b423fddf_add_position_division_position.py  2024_08_03_1614-692cf370168b_create_task_task_user_step.py  2024_08_03_1642-66466444db44_update_task.py  2024_08_03_1842-c1715a18ca7e_update_task_to_user_relations.py
dev_ops/: docker-compose.dev.yaml  docker-compose.test.yaml  ltree.sql  pg-Dockerfile
src/: config.py  main.py
src/api/: __init__.py
src/auth/api/: __init__.py
src/auth/models/: __init__.py  account.py  company.py  invite.py  secret.py  user.py
src/auth/repositories/: __init__.py  user.py  (+4 more)
src/database/: db.py
src/models/: __init__.py  company.py  division.py  division_position.py  invite.py  position.py  secret.py  step.py  task.py  task_observer.py  task_performer.py  task_user.py  user.py
src/repositories/: __init__.py  account.py  division.py  division_position.py  secret.py  step.py  task.py  task_observer.py  task_performer.py  task_user.py  user.py
src/schemas/: responses.py
src/utils/: repository.py  response_factory.py  service.py  unit_of_work.py
tests/: conftest.py
tests/unit/: conftest.py
(+65 files in other folders)
