[tool.poetry]
name = "em-fast-api-project"
version = "0.1.0"
description = ""
authors = ["Maxim Olesov <windigotp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
pydantic-settings = "^2.3.4"


[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pytest-dotenv = "0.5.2"
pytest-asyncio = "0.23.7"


[tool.poetry.group.dev.dependencies]
ruff = "0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
